--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.3",
+    "@nuxtjs/svg": "^0.4.0",
     "@prettier/plugin-pug": "^2.0.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
